# Emploi

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-29-emploi-cli-next-evolution.md  2026-04-29-managed-browser-france-travail.md  hellowork-application-flow.md  nextcloud-api-integration.md
emploi/: applications.py  auto_apply.py  brief.py  cli.py  config.py  config_registry.py  daemon.py  dashboard.py  dashboard_auth.py  db.py  doctor.py  hellowork.py  hellowork_search.py  importers.py  logging.py  migrations.py  monitoring.py  nextcloud_deck.py  nextcloud_files.py  nextcloud_tasks.py  retry.py  scoring.py  utils.py
emploi/_dashboard_ui/static/: keyboard.js  manifest.json  sw.js
emploi/browser/: __init__.py  client.py  errors.py  models.py
emploi/cli/: __init__.py  __main__.py  application.py  auto_apply.py  browser.py  dashboard.py  doctor.py  document_profile.py  ft.py  hellowork.py  import_.py  kanban.py  nextcloud.py  offer.py  option.py  report.py  search_all.py  search_profile.py
emploi/france_travail/: __init__.py  api_client.py  distance.py  extractors.py  flows.py
emploi/sources/: __init__.py  aggregator.py  apec.py  cadremploi.py  comparis.py  jobs_ch.py  jobup.py  monster.py  okjob.py
skills/emploi-cli/: SKILL.md
tests/: test_aggregator.py  test_application_auto_followup.py  test_application_drafts.py  test_application_nextcloud_pipeline.py  test_application_pipeline.py  test_applications.py  test_auto_apply.py  test_brief.py  test_browser_client.py  test_cli.py  test_cli_browser.py  test_cli_entrypoint.py  test_cli_france_travail.py  test_cli_hellowork.py  test_cli_hellowork_search.py  test_cli_options_regressions.py  test_daemon.py  test_dashboard.py  test_db.py  test_distance.py  test_doctor.py  test_document_profiles.py  test_france_travail_api.py  test_france_travail_extractors.py  test_france_travail_flows.py  test_hellowork_flow.py  test_hellowork_search.py  test_importers.py  test_integration_e2e.py  test_job_sources.py  test_kanban_config.py  test_load_batch.py  test_migrations.py  test_monitoring.py  test_nextcloud_deck_cards.py  test_nextcloud_files_config.py  test_nextcloud_files_export.py  test_nextcloud_tasks_config.py  test_nextcloud_tasks_sync.py  test_options.py  (+4 more)
(+12 files in other folders)
