[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emploi"
version = "0.1.0"
description = "CLI personnel pour chercher, scorer et suivre les offres d'emploi."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
emploi = "emploi.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["emploi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
