[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emploi"
version = "0.1.0"
description = "CLI personnel pour chercher, scorer et suivre les offres d'emploi."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
emploi = "emploi.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["emploi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "typer.*",
  "rich.*",
]
ignore_missing_imports = true
